[MOM-403] fix: Modofy reservationg edge case